--- a/app/src/main/res/layout-w600dp/contact_list.xml
+++ b/app/src/main/res/layout-w600dp/contact_list.xml
@@ -24,9 +24,23 @@
  />
 
     <FrameLayout
-        android:id="@+id/contact_detail_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="3" />
+        android:layout_weight="3">
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/item_margin"
+            android:text="@string/select_contact" />
+
+        <FrameLayout
+            android:id="@+id/contact_detail_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
+
 
 </LinearLayout>
