--- a/app/src/main/res/layout/empty_contact_list.xml
+++ b/app/src/main/res/layout/empty_contact_list.xml
@@ -10,5 +10,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="@dimen/item_margin"
-        android:text="@string/no_contacts" />
+        android:text="@string/empty_contacts" />
 </LinearLayout>
